# HTMLizeMD

./: .space.kts  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake.yml
src/: clap.h  generator.h  lexer.h  main.cpp  utils.h
tests/: clap_test.cpp
